--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
-    "npm": "^9.6.2"
+    "npm": "^9.6.2",
+    "validator": "^13.9.0"
   }
 }
